--- a/configServer/views/profile.ejs
+++ b/configServer/views/profile.ejs
@@ -31,6 +31,10 @@
                 var ele = data.tagid.toString();
                 console.log(ele);
                 $("#" + ele).removeClass('user-online');
+                //can't  change the link color when the gateway is offline
+                //since the colour has to be changed, when the gateway will be online again
+//                var ele = ele + 'url';
+//                $('#' + ele).css('color', 'black');
             });
 
             socket.on('disconnect', function (data) {
@@ -117,7 +121,7 @@
                 });
 
                 function connect() {
-
+                    console.log("connected to the pubnub eon");
                 };
             })
         })
