--- a/configServer/views/partials/head.ejs
+++ b/configServer/views/partials/head.ejs
@@ -25,3 +25,9 @@
         }
     });
 </script>
+<script>
+    $(document).ready(function () {
+        $('.ui.dropdown').dropdown();
+        $('#header_email').text('<%= user%>');
+    })
+</script>
